Refactor HTML structure and formatting
Updated table cell padding and made minor formatting adjustments.

--- a/assignment.html
+++ b/assignment.html
@@ -10,9 +10,9 @@
         <h2>Nihareeka College of Management and Information Technology</h2>
         <h3>Bachelor in Computer Applications (BCA)</h3>
         <h3>First (1<sup>st</sup>) Semester Regular Class Schedule - 2081 Batch</h3>
-        <h3><strong>Effective from 2081-07-26</strong></h3>
+        <h3>Effective from 2081-07-26</h3>
 
-        <table border="1" cellspacing="0" cellpadding="6">
+        <table border="1" cellspacing="0" cellpadding="8">
             <thead>
                 <tr>
                     <th>Days</th>
@@ -26,24 +26,16 @@
             </thead>
             <tbody>
                 <tr>
-                    <td align="center"><b>Sunday</b></td>
+                    <td align="center"><strong>Sunday</strong></td>
                     <td align="center"><b>CAEN 103-<br>English I<br>(JK)</b></td>
                     <td align="center"><b>CACS 101-Computer<br>Fundamentals and Application<br>(DBA)</b></td>
                     <td align="center"><b>CACS 105-<br>Digital Logic<br>(UR)</b></td>
-                    <td rowspan="6" align="center"><b>B<br>R<br>E<br>A<br>K</b></td>
+                    <td rowspan="6" align="center"><strong>B<br>R<br>E<br>A<br>K</strong></td>
                     <td align="center"><b>CAMT 104-<br>Mathematics I<br>(AK)</b></td>
                     <td align="center"><b>CACO 102-Society<br>and Technology<br>(RP)</b></td>
                 </tr>
                 <tr>
-                    <td align="center"><b>Monday</b></td>
-                    <td align="center"><b>CAEN 103-<br>English I<br>(JK)</b></td>
-                    <td align="center"><b>CACS 101-Computer<br>Fundamentals and Application<br>(DBA)</b></td>
-                    <td align="center"><b>CACS 105-<br>Digital Logic<br>(UR)</b></td>
-                    <td align="center"><b>CAMT 104-<br>Mathematics I<br>(AK)</b></td>
-                    <td align="center"><b>CACO 102-Society<br>and Technology<br>(RP)</b></td>
-                </tr>
-                <tr>
-                    <td align="center"><b>Tuesday</b></td>
+                    <td align="center"><strong>Monday</strong></td>
                     <td align="center"><b>CAEN 103-<br>English I<br>(JK)</b></td>
                     <td align="center"><b>CACS 101-Computer<br>Fundamentals and Application<br>(DBA)</b></td>
                     <td align="center"><b>CACS 105-<br>Digital Logic<br>(UR)</b></td>
@@ -51,7 +43,7 @@
                     <td align="center"><b>CACO 102-Society<br>and Technology<br>(RP)</b></td>
                 </tr>
                 <tr>
-                    <td align="center"><b>Wednesday</b></td>
+                    <td align="center"><strong>Tuesday</strong></td>
                     <td align="center"><b>CAEN 103-<br>English I<br>(JK)</b></td>
                     <td align="center"><b>CACS 101-Computer<br>Fundamentals and Application<br>(DBA)</b></td>
                     <td align="center"><b>CACS 105-<br>Digital Logic<br>(UR)</b></td>
@@ -59,7 +51,7 @@
                     <td align="center"><b>CACO 102-Society<br>and Technology<br>(RP)</b></td>
                 </tr>
                 <tr>
-                    <td align="center"><b>Thursday</b></td>
+                    <td align="center"><strong>Wednesday</strong></td>
                     <td align="center"><b>CAEN 103-<br>English I<br>(JK)</b></td>
                     <td align="center"><b>CACS 101-Computer<br>Fundamentals and Application<br>(DBA)</b></td>
                     <td align="center"><b>CACS 105-<br>Digital Logic<br>(UR)</b></td>
@@ -67,7 +59,15 @@
                     <td align="center"><b>CACO 102-Society<br>and Technology<br>(RP)</b></td>
                 </tr>
                 <tr>
-                    <td align="center"><b>Friday</b></td>
+                    <td align="center"><strong>Thursday</strong></td>
+                    <td align="center"><b>CAEN 103-<br>English I<br>(JK)</b></td>
+                    <td align="center"><b>CACS 101-Computer<br>Fundamentals and Application<br>(DBA)</b></td>
+                    <td align="center"><b>CACS 105-<br>Digital Logic<br>(UR)</b></td>
+                    <td align="center"><b>CAMT 104-<br>Mathematics I<br>(AK)</b></td>
+                    <td align="center"><b>CACO 102-Society<br>and Technology<br>(RP)</b></td>
+                </tr>
+                <tr>
+                    <td align="center"><strong>Friday</strong></td>
                     <td align="center"><b>CAEN 103-<br>English I<br>(JK)</b></td>
                     <td align="center"><b>CACS 101-Computer<br>Fundamentals and Application<br>(DBA)</b></td>
                     <td align="center"><b>CACS 105-<br>Digital Logic<br>(UR)</b></td>
@@ -79,3 +79,4 @@
     </center>
 </body>
 </html>
+
