Add reference link to assignment.html
Added a reference link to the schedule.

--- a/assignment.html
+++ b/assignment.html
@@ -76,7 +76,8 @@
                 </tr>
             </tbody>
         </table>
-    </center>
+        <a href="Reference.jpg">Reference</a>
+
 </body>
 </html>
 
